# rock-slide-prevention

./: .gitignore  CMakeLists.txt  README.md  deslizamiento.ipynb  main2.cpp  practice.ipynb  toy.ipynb
caps/: .~lock.CAPITULO III.docx#  .~lock.MODELAMIENTO CAIDA LIBRE ELIPSE.xlsx#  MODELAMIENTO CAIDA LIBRE ELIPSE.xlsx
include/: ecs.hpp
include/components/: component.hpp  sceneComponent.hpp  spriteComponent.hpp
include/engine/: common.hpp  native.hpp
include/entities/: entity.hpp  rockEntity.hpp
include/glad/: glad.h
include/managers/: componentManager.hpp  componentManager.inl  entityManager.hpp  entityManager.inl
lib/: hsgil.lib
no_open/: main.cpp
no_open/caps/: CALCULO DE LA SUPERPOSICION.xlsx  CAPITULO II.docx  CAPITULO III.docx  GEOMETRIA SUPERPOSICIÓN.docx  SEMBRADOR.xlsx
shaders/: grid.vs  rock.vs  shader.fs  shader.vs  slope.fs  slope.vs
src/: Rk.hpp  collision.hpp  draw.hpp  draw_talud.hpp  f_normal.hpp  glad.c  intersection.hpp  locales.hpp  main.cpp  move.hpp  punto_contacto.hpp  reporte_vertices_transform.txt  rungek.hpp  seed.hpp  speed.hpp  speed_f_normal.hpp  superposition.hpp
src/engine/: native.cpp
src/entities/: rockEntity.cpp
